src/objects/Sprint_Burndown__c.object
<CustomObject>
    <description>Captures total points and hours remaining in a Sprint at a date. Used for reports and Burndown charts.</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date of this Sprint Burndown</description>
        <inlineHelpText>The date of this Sprint Burndown</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <description>The parent Sprint record for this Sprint Burndown</description>
        <inlineHelpText>The parent Sprint record for this Sprint Burndown</inlineHelpText>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Sprint Burndowns</relationshipLabel>
        <relationshipName>Sprint_Burndowns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Total_Hours_Remaining__c</fullName>
        <description>Total hours remaining for all tasks in this Sprint as at the Sprint Burndown date</description>
        <inlineHelpText>Total hours remaining for all tasks in this Sprint as at the Sprint Burndown date</inlineHelpText>
        <label>Total Hours Remaining</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points_Remaining__c</fullName>
        <description>Total points remaining for all tasks in this Sprint as at the Sprint Burndown date</description>
        <inlineHelpText>Total points remaining for all tasks in this Sprint as at the Sprint Burndown date</inlineHelpText>
        <label>Total Points Remaining</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sprint Burndown</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{0}</displayFormat>
        <label>Sprint Burndown Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Burndowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>